--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node dist/src/index.js",
     "dev": "sh -c 'tsx watch src/index.ts --http-wait-for-sync=false $@ | pino-pretty' --",
-    "lint": "eslint src && prettier --check src",
+    "lint": "eslint src && prettier --check src/*",
     "format": "prettier --write src",
     "test": "vitest run --reporter verbose",
     "test:watch": "vitest watch --reporter verbose",
