--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pharo-indexer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Indexer for the Pharo Protocol",
   "type": "module",
   "main": "dist/src/indexer/index.js",
   "types": "dist/src/indexer/index.d.ts",
@@ -26,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.3",
     "@types/async-retry": "^1.4.8",
     "@types/better-sqlite3": "^7.6.5",
     "@types/cors": "^2.8.13",
